exercise5/condor/694.0-error.txt
  File "Exercise5.py", line 128
    print X_train[].shape
                  ^
SyntaxError: invalid syntax
